# the-art-of-the-terminal

./: .gitignore  README.md
4-cli-tools-to-manage-projects/direnv/python-poetry-aws/: .envrc  README.md  direnvrc  pyproject.toml
4-cli-tools-to-manage-projects/just/: Justfile  Makefile
4-cli-tools-to-manage-projects/smug/: .envrc  amplify.yml
awksome/: README.md
awksome/bank_report/: bank.awk
awksome/redis_client/: README.md  redis.awk
awksome/reverse_shell/: Justfile  rshell.awk
end-to-end-docker-compose/: INSTALL.md  README.md
end-to-end-docker-compose/trumpizer/app/: Dockerfile  app.py  pyproject.toml
end-to-end-docker-compose/trumpizer/app/frontend/: index.html
everything-is-backdoored-by-default/: README.md
games-only-develops-will-understand/: README.md
line-editors/poetry-project/: add-copyright.ed  all-commands.ed  pyproject-new.toml  pyproject.toml
most-misunderstood-proglang/: README.md
postgresql-is-not-a-database/: 01-pgenv-install.sh  02-object-features.sql  03-trunk-extensions-manager-install.sh  04-plpython3u-install.sh  05-plpython3u-demo.sql  06-pg_cron-install.sh  07-pg_cron-demo.sql  08-pub-sub-demo.sql  09-pgmq-install.sh  10-pgmq-demo.sql  11-document-db-demo.sql  12-ml-demo.sql  13-postgrest-install.sh  14-pgtap-install.sh  15-pg_graphql-install.sh  16-pg_graphql-demo.sql  README.md
python-packaging-is-a-mess/: README.md
self-hosted-genai/: README.md
shell-fork-and-zombies/: README.md
shell-is-my-orchestrator/: README.md
use-local-llms-already/: README.md
wasm-is-not-what-you-think/: README.md
weird-and-useful/: README.md
(+96 files in other folders)
