# Copyright (c) 2023 The Art Of The Terminal
[tool.poetry]
name = "line-editors"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
boto3 = "^1.33.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
