[tool.poetry]
name = "python-poetry-aws"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "python_poetry_aws"}]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.34.14"
requests = "^2.31.0"
arrow = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
