[project]
name = "trampizer"
version = "0.1.0"
description = ""
authors = [
    {name = "TheArtOfTheTerminal@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "sqlmodel (>=0.0.22,<0.0.23)",
    "psycopg (>=3.2.5,<4.0.0)",
    "openai (>=1.64.0,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "watchfiles (>=1.0.4,<2.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.7"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
